# doenermann-bot

./: .env  .gitignore  Cargo.toml  README.md  birthdays.csv  bot.py  export.sh
.github/workflows/: build.yml  rust.yml
src/: main.rs
src/commands/: count.rs  doener.rs  mod.rs  next_birthdays.rs  ping.rs  set_birthday.rs
