[package]
name = "doenermann-bot"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
chrono = "0.4"
csv = "1.3"
serde = "1.0"
